Upgrade spring-boot
 - upgrade checkstyle for full java 17 support (like pattern matching)
 - cleanup and remove not recommended DI on fields