@@ -1,11 +1,9 @@
 package de.joblift.service.gitlabpanorama.core.aggregator;
 
-import static de.galan.commons.util.Sugar.*;
-import static java.util.stream.Collectors.*;
-
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.function.Predicate;
 
 import de.joblift.service.gitlabpanorama.core.models.Pipeline;
 import de.joblift.service.gitlabpanorama.core.models.Status;
@@ -32,9 +30,9 @@ public class PipelinePair {
 		Comparator<Pipeline> comparatorId = Comparator.comparing(Pipeline::getId);
 		Comparator<Pipeline> comparatorIdAndLc = comparatorId.thenComparing(Pipeline::latestChange).reversed();
 
-		List<Pipeline> list = Arrays.asList(pipelines).stream().sorted(comparatorIdAndLc).collect(toList());
+		List<Pipeline> list = Arrays.stream(pipelines).sorted(comparatorIdAndLc).toList();
 		active = list.stream().filter(Pipeline::hasActivity).findFirst().orElse(null);
-		current = list.stream().filter(not(Pipeline::hasActivity)).findFirst().orElse(null);
+		current = list.stream().filter(Predicate.not(Pipeline::hasActivity)).findFirst().orElse(null);
 
 		if ((active != null && current != null) && (current.getId() > active.getId() || current.latestChange().isAfter(active.latestChange()))) {
 			active = null;
